--- a/proiect/MarketplaceFermieri/Views/Produse/Index.cshtml
+++ b/proiect/MarketplaceFermieri/Views/Produse/Index.cshtml
@@ -1,8 +1,47 @@
-﻿<h2>Lista cu toate produsele</h2>
-<h2>{{idClientSelectat}}</h2>
+﻿<div class="d-flex d-block mb-5 justify-content-between">
+    <h2>Lista cu toate produsele</h2>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#checkout">
+        Checkout. Am terminat cumparaturile
+    </button>
+</div>
+<div class="card d-inline-flex" style="width: 18rem; margin: 10px;" v-for="(produs, index) in produseCuVanzatori" :key="produseCuVanzatori.idProdus">
+    <img class="card-img-top" :src="produs.image" alt="Fara imagine...">
+    <div class="card-body">
+        <h5 class="card-title">{{produs.numeProdus}}</h5>
+        <p class="card-text">{{produs.descriereProdus}}</p>
+        <div class="d-flex justify-content-around">
+            <div>
+                <button type="button" class="btn btn-light" v-bind:disabled="numarObiecteComanda[index] <= 0" v-on:click="ScadeProdus(index)">-</button>
+                <input type="text" v-model.number="numarObiecteComanda[index]" class="w-50" />
+                <button type="button" class="btn btn-light" v-on:click="AdaugaProdus(index)">+</button>
+            </div>
+            <button type="button" class="btn btn-primary">🛒</button>
+
+        </div>
+    </div>
+</div>
 
 
 
+<!-- Modal -->
+<div class="modal fade" id="checkout" tabindex="-1" aria-labelledby="checkoutLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="checkoutLabel">Checkout. Ai tot ce iti trebuie?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ma mai gandesc</button>
+                <button type="button" class="btn btn-primary">Plaseaza comanda</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section scripts{
 
@@ -10,7 +49,8 @@
         var vm = new Vue({
             el: '#app',
             data: {
-                produseCuVanzatori:[],
+                produseCuVanzatori: [],
+                numarObiecteComanda:[],
                 idClientSelectat: -1,
 
             },
@@ -20,8 +60,32 @@
                         function success(response) {
                             this.produseCuVanzatori = response.body;
                             console.log(response.body);//debug purposes
+                            this.ChangePicture();
+                            this.numarObiecteComanda = Array(this.produseCuVanzatori.length).fill(0);
+                            //console.log(this.produseCuVanzatori)
+                            console.log(this.numarObiecteComanda);
                         }, function error(response) {
                         });
+                },
+                ChangePicture: function () {
+                    for (let i = 0; i < this.produseCuVanzatori.length; i++) {
+                        //console.log(this.produseCuVanzatori[i].image);
+                        if (this.produseCuVanzatori[i].image === null || this.produseCuVanzatori[i].image === undefined ) {
+                            this.produseCuVanzatori[i].image = "./Static/nopicture.jpg";
+                            //console.log(this.produseCuVanzatori[i].image);
+
+                        }
+                    }
+                },
+                AdaugaProdus: function (index) {
+                    //this.$set(this.numarObiecteComanda, index, this.numarObiecteComanda[index] + 1); //works too
+                    this.numarObiecteComanda = [...this.numarObiecteComanda]; //spread operator
+                    this.numarObiecteComanda[index]++;
+
+                },
+                ScadeProdus: function (index) {
+                    this.numarObiecteComanda = [...this.numarObiecteComanda]; //spread operator
+                    this.numarObiecteComanda[index]--;
                 },
                 LocalStorageGetClient: function () {
                     this.idClientSelectat = localStorage.getItem("userData");
